Update neo4j-java-driver to 5.28.10 ()
In addition, the following BOMs have been updated:
- reactor-bom to 2023.0.19
- netty-bom to 4.1.127.Final

Includes cherry-picks: , , .